--- a/contact.html
+++ b/contact.html
@@ -11,13 +11,28 @@
             <h1></h1>
             <nav>
                 <ul>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="menu.html">Menu</a></li>
+                    <li><a href="#"></a>Contact</li>
                 </ul>
             </nav>
         </header>
         <main>
+            <p></p>
+            <form>
+                <label>
+                    Name
+                    <input type="text">
+                </label>
+                <label>
+                    Email
+                    <input type="text">
+                </label>
+                <label>
+                    Comments
+                    <input type="textarea">
+                </label>
+            </form>
         </main>
         <footer>
             <div class="halfer"></div>
