--- a/menu.html
+++ b/menu.html
@@ -11,13 +11,49 @@
             <h1></h1>
             <nav>
                 <ul>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#"></a>Menu</li>
+                    <li><a href="contact.html"></a>Contact</li>
                 </ul>
             </nav>
         </header>
         <main>
+            <div>
+                <h2></h2>
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
+            <div>
+                <h2></h2>
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
+            <div>
+                <h2></h2>
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
+            <div>
+                <h2></h2>
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
         </main>
         <footer>
             <div class="halfer"></div>
