added css and basic style

--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link href="https://fonts.googleapis.com/css?family=Rammetto+One" rel="stylesheet">
+        <link rel="stylesheet" href="./css/style.css">
         <title>Restaurant</title>
     </head>
     <body>
         <header>
-            <h1></h1>
+            <h1>Landon's Restaurant</h1>
             <nav>
                 <ul>
                     <li><a href="#">Home</a></li>
@@ -20,15 +22,15 @@
         <main>
             <section aria-labelledby="pictures of food">
                 <h2 id="pictures of food"></h2>
-                    <div><img src="" alt=""></div>
-                    <div><img src="" alt=""></div>
-                    <div><img src="" alt=""></div>
-                    <div><img src="" alt=""></div>
+                    <div><img src="http://www.placepuppy.net/300/300" alt="Tacos"></div>
+                    <div><img src="http://www.placepuppy.net/300/300" alt="Burritos"></div>
+                    <div><img src="http://www.placepuppy.net/300/300" alt="Guac"></div>
+                    <div><img src="http://www.placepuppy.net/300/300" alt="Nachos"></div>
             </section>
             <section aria-labelledby="about us">
-                <h2 id="about us></h2>
-                <p></p>
-                <p></p>
+                <h2 id="about us">Deserunt eu nulla occaecat consectetur.</h2>
+                <p>Non id est ut fugiat do aliquip nostrud incididunt enim pariatur nulla est enim sint. Nisi esse qui amet sint id excepteur cillum et minim duis cupidatat sunt. Ut officia aliquip anim amet nostrud. Pariatur aute consequat quis et qui mollit eiusmod consequat incididunt mollit voluptate. Do velit velit officia laboris ea aliqua aliqua ut excepteur aliqua. Est eu non tempor non enim proident pariatur consectetur ullamco in qui velit ad. Culpa aliquip reprehenderit incididunt esse.</p>
+                <p>Mollit sint ipsum sint aliquip irure incididunt aute non exercitation dolor incididunt nostrud excepteur. Pariatur dolor tempor culpa nulla. Voluptate minim nisi cupidatat tempor exercitation quis nulla labore elit velit dolor sit deserunt mollit. Occaecat consequat sit velit ex deserunt est adipisicing cillum ea ad. Non nostrud dolor commodo tempor ullamco anim incididunt. Tempor laborum aute reprehenderit minim labore est quis eu nulla qui.</p>
             </section>
         </main>
         <footer>
@@ -43,4 +45,4 @@
             </div>
         </footer>
     </body>
-</html>DOCTYPE>
+</html>
