--- a/menu.html
+++ b/menu.html
@@ -4,54 +4,56 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link href="https://fonts.googleapis.com/css?family=Rammetto+One" rel="stylesheet">
+        <link rel="stylesheet" href="./css/style.css">
         <title>Restaurant</title>
     </head>
     <body>
         <header>
-            <h1></h1>
+            <h1>Deserunt eu nulla occaecat consectetur.</h1>
             <nav>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="#"></a>Menu</li>
-                    <li><a href="contact.html"></a>Contact</li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="#">Menu</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </header>
         <main>
             <div>
-                <h2></h2>
+                <h2>Menu</h2>
                 <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li>Deserunt eu nulla occaecat consectetur.</li>
+                    <li>Deserunt eu nulla occaecat consectetur.</li>
+                    <li>Deserunt eu nulla occaecat consectetur.</li>
+                    <li>Deserunt eu nulla occaecat consectetur.</li>
                 </ul>
             </div>
             <div>
                 <h2></h2>
                 <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li>Deserunt eu nulla occaecat consectetur.</li>
+                    <li>Deserunt eu nulla occaecat consectetur.</li>
+                    <li>Deserunt eu nulla occaecat consectetur.</li>
+                    <li>Deserunt eu nulla occaecat consectetur.</li>
                 </ul>
             </div>
             <div>
-                <h2></h2>
+                <h2>Deserunt eu nulla occaecat consectetur.</h2>
                 <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li>Deserunt eu nulla occaecat consectetur.</li>
+                    <li>Deserunt eu nulla occaecat consectetur.</li>
+                    <li>Deserunt eu nulla occaecat consectetur.</li>
+                    <li>Deserunt eu nulla occaecat consectetur.</li>
                 </ul>
             </div>
             <div>
-                <h2></h2>
+                <h2>Deserunt eu nulla occaecat consectetur.</h2>
                 <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li>Deserunt eu nulla occaecat consectetur.</li>
+                    <li>Deserunt eu nulla occaecat consectetur.</li>
+                    <li>Deserunt eu nulla occaecat consectetur.</li>
+                    <li>Deserunt eu nulla occaecat consectetur.</li>
                 </ul>
             </div>
         </main>
@@ -67,4 +69,4 @@
             </div>
         </footer>
     </body>
-</html>DOCTYPE>
+</html>
