--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link href="https://fonts.googleapis.com/css?family=Rammetto+One" rel="stylesheet">
+        <link rel="stylesheet" href="./css/style.css">
         <title>Restaurant</title>
     </head>
     <body>
@@ -13,7 +15,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="menu.html">Menu</a></li>
-                    <li><a href="#"></a>Contact</li>
+                    <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
         </header>
@@ -46,4 +48,4 @@
             </div>
         </footer>
     </body>
-</html>DOCTYPE>
+</html>
